--- a/browser-extension/manifest.json
+++ b/browser-extension/manifest.json
@@ -33,7 +33,7 @@
     {
       "matches": [
         "*://twitter.com/*",
-        "*://x.com/*", 
+        "*://x.com/*",
         "*://facebook.com/*",
         "*://www.facebook.com/*",
         "*://instagram.com/*",
@@ -45,12 +45,18 @@
         "*://snapchat.com/*",
         "*://www.snapchat.com/*"
       ],
-      "js": ["content-script.js"],
+      "js": [
+        "content-script.js"
+      ],
       "run_at": "document_idle"
     },
     {
-      "matches": ["http://localhost:3000/*"],
-      "js": ["web-bridge.js"],
+      "matches": [
+        "http://localhost:3000/*"
+      ],
+      "js": [
+        "web-bridge.js"
+      ],
       "run_at": "document_start"
     }
   ],
@@ -60,7 +66,7 @@
   },
   "icons": {
     "16": "icons/icon16.png",
-    "32": "icons/icon32.png", 
+    "32": "icons/icon32.png",
     "48": "icons/icon48.png",
     "128": "icons/icon128.png"
   }
